[package]
name = "jsonpath-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zhxiaogg = { package = "json_path", version = "0.1.5" }
jsonpath = "0.1.1"
jsonpath-plus = "0.1.9"
jsonpath-rust = "0.3.0"
jsonpath_lib = "0.3.0"
serde_json = "1.0.99"
serde_json_path = "0.6.0"

[dependencies.redis]
git = "https://github.com/RedisJSON/RedisJSON"
version = "0.1.0"
package = "json_path"
